--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "openapi2slate",
   "version": "1.0.1",
   "description": "Convert an Open API (i.e. Swagger) specification to Slate Markdown",
-  "homepage": "https://github.com/scrive/openapi2slate",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/scrive/openapi2slate.git"
+  "homepage": "https://github.com/KoerberDigitalDevTeam/openapi2slate",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KoerberDigitalDevTeam/openapi2slate.git"
   },
-  "author": "Jonathan Jouty",
+  "author": "Jonathan Jouty, @haassConnyun",
   "license": "BSD-3-Clause",
   "bin": "main.js",
   "dependencies": {
