--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Jonathan Jouty, @haassConnyun",
   "license": "BSD-3-Clause",
   "bin": "main.js",
+  "scripts": {
+    "start": "node main.js"
+  },
   "dependencies": {
     "commander": "^2.9.0",
     "fs": "0.0.2",
